--- a/Practice.WinformOrder.UI/Practice.WinformOrder.UI.csproj
+++ b/Practice.WinformOrder.UI/Practice.WinformOrder.UI.csproj
@@ -9,6 +9,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Form1 - 複製.cs" />
+    <Compile Remove="Form1 - 複製.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Remove="Form1 - 複製.resx" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Practice.WinformOrder\Practice.WinformOrder.csproj" />
   </ItemGroup>
 
